Modified skeleton for version 1 of door controller service
