# app.js
@@ -2,22 +2,18 @@
 
 var SwaggerExpress = require('swagger-express-mw');
 var app = require('express')();
-module.exports = app; // for testing
+module.exports = app; // For testing
 
 var config = {
-  appRoot: __dirname // required config
+  appRoot: __dirname,
+  swaggerSecurityHandlers: require('./api/helpers/security')
 };
 
 SwaggerExpress.create(config, function(err, swaggerExpress) {
-  if (err) { throw err; }
+  if (err) throw err;
 
-  // install middleware
   swaggerExpress.register(app);
 
   var port = process.env.PORT || 10010;
   app.listen(port);
-
-  if (swaggerExpress.runner.swagger.paths['/hello']) {
-    console.log('try this:\ncurl http://127.0.0.1:' + port + '/hello?name=Scott');
-  }
 });
